i think i finished now